Update SUMMARY.md, 二、找房租房.md, 办理“迁入”（首次住址申报）.md, 合同签署和房屋交接.md, 常用租房渠道及其流程.md, 资金安全和常见骗局.md

--- a/办理“迁入”（首次住址申报）.md
+++ b/办理“迁入”（首次住址申报）.md
@@ -1,6 +1,6 @@
-> [success] 本章作者：田竹仝、陈雨航、赵逸飞、杨锦涛、范梦瑶
+> [success] 本章作者：田竹仝、陈雨航、赵逸飞、杨锦涛、范梦瑶、张家萌
 
-> [info] *本章节内容最近更新于2023年8月30日*。
+> [info] *本章节内容最近更新于2023年8月30日。*
 > ETH和UZH两所大学对于办理”迁入“均有十分详细的指导，参见：
 > - ETH：[Applying for a residence permit](<https://ethz.ch/en/studies/international/after-arrival/residence-permit/applying.html>)
 > - UZH：[Registering in Switzerland](<https://www.uzh.ch/cmsssl/en/studies/application/entry/registration.html>)
@@ -26,7 +26,7 @@
 ➢ **ETH&UZH留学生专用人口登记办公室 [Residents' Registration Office (Student Administrations)]**（[预约链接](https://www.etermin.net/unieth)；地址：[Fabrikstrasse 3, 8005 Zürich](<https://www.google.com/maps/dir//Fabrikstrasse+3,+8005+Z%C3%BCrich/@47.387454,8.5268538,17z/data=!4m8!4m7!1m0!1m5!1m1!1s0x47900a6cb4f4cbf1:0x6156ffd78ddaabea!2m2!1d8.5294287!2d47.3874504?entry=ttu>)）或
 ➢ **南城人口登记办公室（Personenmeldeamt Zürich Süd）**（[预约链接](<https://www.etermin.net/personenmeldeamtsued?lang=en>)；地址：Stadthausquai 17, 8001 Zürich / 市政厅）
 进行住址申报。
-一般，学生应**优先选择前者**办理首次住址申报。选择前者的，预约后应**立即填写[表格](https://www.etermin.net/r/7105/RegistrationForm.pdf)并发送给students@zuerich.ch**以加快后续处理速度
+一般，学生应**优先选择前者**办理首次住址申报，此处人流量较小，**预约可用时间较多**。选择前者的，预约后应**立即填写[表格](https://www.etermin.net/r/7105/RegistrationForm.pdf)并发送给students@zuerich.ch**以加快后续处理速度。
 * 如居住地在苏黎世市区，但不是学生身份的（例如博后/研究助理/研究员等），应于抵达苏黎世州后14天内**凭预约**前往**南城人口登记办公室（Personenmeldeamt Zürich Süd）**（[预约链接](<https://www.etermin.net/personenmeldeamtsued?lang=en>)）进行住址申报。
 * 如居住地在苏黎世郊区的，必须于抵达苏黎世后14天内前往所在区县的人口登记办公室进行住址申报，具体请参见所在区县的人口登记办公室官网。如不明确自己所在区县或不明确自己住址所对应人口登记办公室的，可直接询问房东或在Google上以 **”住址邮编+Personenmeldeamt“ 为关键词**进行搜索。
 
@@ -49,10 +49,9 @@
 - 护照原件
 - 租房合同原件（如果你是转租合同，需要把二房东手里的原始合同也一起带过去，且最好二房东陪同前往）
 - 学期注册确认（Erweiterte Immatrikulationsbestätigung / Enrolment confirmation）
-- 约200瑞郎 **（可能不支持现金；支持VISA/MASTER刷卡；是否支持银联需要核实）**
+- 182.00瑞郎 （支持现金但**不支持找零**；支持VISA/MASTER/银联刷卡）
 ➢ 申报确认函：40瑞郎
 ➢ 居留卡制证：142瑞郎
-➢ 以及其它可能费用
 
 ^
 
@@ -68,7 +67,7 @@
 新迁入苏黎世的人员在完成住址申报后会获得一张“申报确认函”（一张含有个人信息和移民局盖章的A4纸，范例见:attachment[MBDOP.pdf]{src=".topwrite/assets/MBDOP.pdf" size="490.83 kB"}），其在大多数场合与居留证等效，凭该申报确认函即可办理瑞士本地的银行卡（见本篇[《瑞士银行卡》章](26瑞士银行卡.md)）和学生保险（见[本篇《保险及豁免》章](27保险及豁免.md)），但办理Postpaid电话卡业务时仍然需要正式的居留证（见[本篇《瑞士电话卡》章](<瑞士电话卡.md>)）。
 虽然相比于正式的居留证，这张确认函使用频率相对较低，但是也应**妥善保管**备用（即使已获得正式居留证）。例如，[办理地址变更](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/umzug.html)时便需要用到这张申报确认函上的参考号（具体根据所选报告方式有所不同）。
 
-> [info] *后期住址有所变更，需要办理住址变更申报的，或是因离开所住市县需要办理注销的，请参考*[35 “户口”相关](35“户口”相关.md)*部分*。
+> [info] *后期住址有所变更，需要办理住址变更申报的，或是因离开所住市县需要办理注销的，请参考[生活篇《“户口”相关》章](<35“户口”相关.md>)*。
 
 ^
 
