--- a/12国内手机及电话卡.md
+++ b/12国内手机及电话卡.md
@@ -46,7 +46,7 @@
 
 ^
 
-### **4. 关于苹果手机的App Store区域**
+### **4. 关于苹果手机的App Store区域问题**
 
 对于使用苹果手机人员，抵达瑞士前需**将苹果手机及App Store区域切换到瑞士**，以便能够在App Store中搜索并下载瑞士常用的各类应用（如[SBB Mobile](https://www.sbb.ch/de/fahrplan/mobile-fahrplaene/sbb-mobile.html)、[ZVV-App](https://www.zvv.ch/zvv/de/service/apps/zvv-app.html)等）。
 设置步骤（根据手机具体型号可能略微有所不同，仅供参考）：
@@ -56,6 +56,6 @@ Apple Setting：Setting → Language & Region → Region Apple Store：Apple Sto
 
 ### **5. 关于安卓手机的谷歌框架**
 
-> [danger] 【学联提醒】*受国际局势影响，部分新款的华为手机可能无法使用任何谷歌服务，此时建议更换其他手机以确保在瑞士能够下载并使用相关软件*。
+> [danger] 【学联提醒】*受国际局势影响，部分新款的国产安卓手机可能无法使用任何谷歌服务，此时建议更换其他手机以确保在瑞士能够下载并使用相关软件*。
 
 对于使用安卓手机人员，因瑞士许多手机软件均依赖谷歌框架运行，入境瑞士前需**开启安卓手机内的谷歌基础服务**，以便于通过Google Play Store安装瑞士生活常用的APP（如[SBB Mobile](https://www.sbb.ch/de/fahrplan/mobile-fahrplaene/sbb-mobile.html)、[ZVV-App](https://www.zvv.ch/zvv/de/service/apps/zvv-app.html)等）并运行之。为此，最好在国内即安装好所谓的“谷歌三件套”（Google Service Framework、Google Play Service、Google Play Store）。
