--- a/办理“迁入”（首次住址申报）.md
+++ b/办理“迁入”（首次住址申报）.md
@@ -1,6 +1,6 @@
 > [success] 本章作者：田竹仝、陈雨航、赵逸飞、杨锦涛、范梦瑶、张家萌
 
-> [info] *本章节内容最近更新于2023年8月30日。*
+> [info] *本章节内容最近更新于2023年9月1日。*
 > ETH和UZH两所大学对于办理”迁入“均有十分详细的指导，参见：
 > - ETH：[Applying for a residence permit](<https://ethz.ch/en/studies/international/after-arrival/residence-permit/applying.html>)
 > - UZH：[Registering in Switzerland](<https://www.uzh.ch/cmsssl/en/studies/application/entry/registration.html>)
@@ -8,31 +8,45 @@
 > [info] *本章节使用了诸多专有翻译，请参考本章附录部分。*
 
 ### **1. 苏黎世州的住址申报体系介绍**
-
+#### **1.1 总体介绍**
 根据[相关法律法规](http://www2.zhlex.zh.ch/appl/zhlex_r.nsf/0/37FA9D3FAA0D5447C1257F1D004A8834/$file/142.1_11.5.15_91.pdf)，苏黎世州有着严格的住址申报制度，所有居民均有义务向政府申报自己的住址，其中**由国外（州外）新迁入的人员必须在抵达苏黎世州后14天内进行申报**。
 > [danger] 【学联提醒】
 > - 由于办理申报**需要提供租房合同**（见下文），若（预计）进入苏黎世州后14天内不能找到住处的，或是找到住处但因客观原因（如预约已满）无法按时进行申报的，必须**在此期限内联系临时住址对应的人口登记办公室**（见下文），向工作人员说明自己的情况，请工作人员进行临时记录，以免成为“黑户”。
 >- 如不明确自己的住址是属于市区还是郊区的，可
 > ➢ **直接询问房东或室友**，或
-> ➢ **通过地址判定**：如地址邮编为“Zürich”字样则代表该地址在市区，如为其他字样（如”Kloten“”Winterthur“等）则代表该地址在郊区。
+> ➢ **通过地址判定**：如地址邮编后为“Zürich”则代表该地址在市区，如为其他（如”Kloten“”Winterthur“等）则代表该地址在郊区；该名称即为住址所在市县名称。
 
-对于**从瑞士以外的国家迁入苏黎世州的人员**（即首次在苏黎世州办理申报的，所有从国内首次前来苏黎世留学的同学均属此类）：
+#### **1.2 瑞士以外国家迁入苏黎世州人员的首次申报**
+*（所有从国内首次前来苏黎世留学的同学均属此类）*
 > [warning] 【学联提醒】从瑞士以外的国家迁入苏黎世州，且居住地在苏黎世市区的：
 > - 无论选择哪一人口登记办公室，都**必须预约**。办理当天，可以较预约时间稍早到达，但**万万不能迟到**。此外，在8-9月的留学生入境高峰期，落地后再预约可能只有非常靠后日期可供选择。因此，如在入境前已找到房且已经签署租房合同/确认会签署租房合同，建议**根据入境日期尽早预约**。
 > - 若未办理预约直接前往，则会由人口登记办公室的工作人员现场分配时间并签发预约单，届时须凭预约单上的时间再次前往对应的人口登记办公室办理住址申报。
 > - 若所预约时间/被分配时间超过入境后14天限制的，须按前文所述，**额外联系人口登记办公室说明情况**
+##### **1.2.1 对于居住在市区的学生**
+对于居住地在苏黎世市区，且是学生身份（本科/硕士/博士）的，应于抵达苏黎世州后14天内**凭预约**前往
+- **ETH&UZH留学生专用人口登记办公室 [Residents' Registration Office (Student Administrations)]**
+（该人口登记办公室**仅于8-9月新生入学季开放**）
+➢ [预约链接](https://www.etermin.net/unieth)
+➢ 地址：[Fabrikstrasse 3, 8005 Zürich](<https://www.google.com/maps/dir//Fabrikstrasse+3,+8005+Z%C3%BCrich/@47.387454,8.5268538,17z/data=!4m8!4m7!1m0!1m5!1m1!1s0x47900a6cb4f4cbf1:0x6156ffd78ddaabea!2m2!1d8.5294287!2d47.3874504?entry=ttu>)
 
-* 如居住地在苏黎世市区，且是学生身份的（本科/硕士/博士），应于抵达苏黎世州后14天内**凭预约**前往
-➢ **ETH&UZH留学生专用人口登记办公室 [Residents' Registration Office (Student Administrations)]**（[预约链接](https://www.etermin.net/unieth)；地址：[Fabrikstrasse 3, 8005 Zürich](<https://www.google.com/maps/dir//Fabrikstrasse+3,+8005+Z%C3%BCrich/@47.387454,8.5268538,17z/data=!4m8!4m7!1m0!1m5!1m1!1s0x47900a6cb4f4cbf1:0x6156ffd78ddaabea!2m2!1d8.5294287!2d47.3874504?entry=ttu>)）或
-➢ **南城人口登记办公室（Personenmeldeamt Zürich Süd）**（[预约链接](<https://www.etermin.net/personenmeldeamtsued?lang=en>)；地址：Stadthausquai 17, 8001 Zürich / 市政厅）
+或
+- **南城人口登记办公室（Personenmeldeamt Zürich Süd）**
+➢ [预约链接](<https://www.etermin.net/personenmeldeamtsued?lang=en>)
+➢ 地址：Stadthausquai 17, 8001 Zürich / 市政厅
+
 进行住址申报。
 一般，学生应**优先选择前者**办理首次住址申报，此处人流量较小，**预约可用时间较多**。选择前者的，预约后应**立即填写[表格](https://www.etermin.net/r/7105/RegistrationForm.pdf)并发送给students@zuerich.ch**以加快后续处理速度。
-* 如居住地在苏黎世市区，但不是学生身份的（例如博后/研究助理/研究员等），应于抵达苏黎世州后14天内**凭预约**前往**南城人口登记办公室（Personenmeldeamt Zürich Süd）**（[预约链接](<https://www.etermin.net/personenmeldeamtsued?lang=en>)）进行住址申报。
-* 如居住地在苏黎世郊区的，必须于抵达苏黎世后14天内前往所在区县的人口登记办公室进行住址申报，具体请参见所在区县的人口登记办公室官网。如不明确自己所在区县或不明确自己住址所对应人口登记办公室的，可直接询问房东或在Google上以 **”住址邮编+Personenmeldeamt“ 为关键词**进行搜索。
 
+##### **1.2.2 对于居住在市区的非学生**
+对于居住地在苏黎世市区，但不是学生身份的（例如博后/研究助理/研究员等）应于抵达苏黎世州后14天内**凭预约**前往**南城人口登记办公室（Personenmeldeamt Zürich Süd）**（[预约链接](<https://www.etermin.net/personenmeldeamtsued?lang=en>)；地址：Stadthausquai 17, 8001 Zürich / 市政）进行住址申报。
+
+##### **1.2.3 对于居住在郊区的人员**
+如居住地在苏黎世郊区的，必须于抵达苏黎世后14天内前往所在区县的人口登记办公室进行住址申报，具体请参见所在区县的人口登记办公室官网。如不明确自己所在区县或不明确自己住址所对应人口登记办公室的，可直接询问房东或在Google上以 **”住址邮编+Personenmeldeamt“ 为关键词**进行搜索。
+
+#### **1.3 瑞士其他州迁入苏黎世州人员的首次申报**
 **对于从瑞士其他地区迁入苏黎世州（Kantonswechsel）的人员**：
 
-* 迁入苏黎世前，须确保已在原居住地注销
+* 迁入苏黎世前，须确保已在原居住地注销，并获得苏黎世州移民局的书面**迁入许可**
 * 如居住地在苏黎世市区的，必须于抵达苏黎世后14天内前往
 ➢ **南城人口登记办公室**（Personenmeldeamt Zürich Süd，地址：Stadthausquai 17, 8001 Zürich / 市政厅）或
 ➢ **北城人口登记办公室**（Personenmeldeamt Zürich Nord，地址：Hofwiesenstrasse 370, 8050 Zürich / Oerlikon火车站）或
@@ -45,10 +59,10 @@
 ### **2. 首次办理住址申报所需材料**
 
 根据[苏黎世市政府相关要求](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/zuzug.html)，参考[ETH的相关介绍](<https://ethz.ch/en/studies/international/after-arrival/residence-permit/applying.html>)，从瑞士以外的国家迁入苏黎世州的人员在首次办理住址申报时须准备以下材料（居住在苏黎世郊区人员也可按此执行）：
-
 - 护照原件
 - 租房合同原件（如果你是转租合同，需要把二房东手里的原始合同也一起带过去，且最好二房东陪同前往）
 - 学期注册确认（Erweiterte Immatrikulationsbestätigung / Enrolment confirmation）
+*对于在ETH\&UZH留学生专用人口登记办公室办理首次申报的UZH学生，如尚未获得注册确认的，亦可使用UZH发放的Attestation代替。*
 - 182.00瑞郎 （支持现金但**不支持找零**；支持VISA/MASTER/银联刷卡）
 ➢ 申报确认函：40瑞郎
 ➢ 居留卡制证：142瑞郎
