Update 01行前准备.md, 04生活相关.md, 10申请签证.md, 11行李准备.md, 26瑞士银行卡.md, 27保险及豁免.md, 28居留证的首次办理.md, SUMMARY.md, 办理“迁入”（首次住址申报）.md, 奖助学金和助教兼职.md, 常用租房渠道及其流程.md, 行前-国内银行卡相关.md, 防诈反诈.md Delete 12国内银行卡.md

--- a/26瑞士银行卡.md
+++ b/26瑞士银行卡.md
@@ -1,12 +1,14 @@
-> [success] 本章作者：俞玥，范梦瑶，杨锦涛
+> [success] 本章作者：俞玥、范梦瑶、杨锦涛
 
-> [warning] 【学联提醒】*Debit储蓄卡可以正式汇款转账，但Prepaid/Credit卡不行。请避免将大量金额一次性充入Prepaid/Credit卡，否则之后将无法进行正式转账（如使用Einzahlungsschein交房租，交学费等）且无法转回Debit储蓄卡，而只能自己购物消费或使用Twint进行非正式场合的转账交易。*
+> [info] 本章节的表格内容使用电脑阅读体验更佳
 
-#### **1. 实体银行**
+> [danger] 【学联提醒】*储蓄卡（Debit）可以正式汇款转账，但预付卡（Prepaid/Credit卡）不行，且预付卡内资金无法转回储蓄卡，而只能自己购物消费或使用Twint进行非正式场合的转账交易。因此，请避免将大量金额一次性充入预付卡，以避免后期无法进行正式转账（如缴纳房租、学费等）。*
 
-|          | UBS                                                                                                                                                                                                | PostFinance                                                                                                                                                              | ZKB                                                                                                                                            |
+### **1. 实体银行**
+
+| 银行名称 | 瑞银集团 UBS | 瑞士邮政银行 PostFinance | 苏黎世州州立银行 &#xA;Zürcher Kantonalbank (ZKB) |
 | -------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ---------------------------------------------------------------------------------------------------------------------------------------------- |
-| 账户及卡相关信息 | **Pure**: UBS Personal Account（主要用于支付，绑定debit card）和UBS Savings Account （主要用于储蓄），**prepaid**和debit card。&#xA;**Pro**: UBS Personal Account和UBS Savings Account，Standard **credit** card和debit card | Student account （支付账户，可选瑞法或欧元，绑定PostFinance Card），Savings account（储蓄账户，可选瑞法或欧元），PostFinance Card （debit card）, Mastercard Value （prepaid）或者 Classic/Standard credit card | ZKB Bildung plus Konto（支付账户），ZKB Bildung plus Sparkonto（储蓄账户），ZKB Visa Debit STUcard（与支付账户绑定），Basic/Standard credit card or Prepaid Mastercard |
+| 账户及银行卡 | **Pure**: UBS Personal Account（主要用于支付，绑定debit card）和UBS Savings Account （主要用于储蓄），**prepaid**和debit card。&#xA;**Pro**: UBS Personal Account和UBS Savings Account，Standard **credit** card和debit card | Student account （支付账户，可选瑞法或欧元，绑定PostFinance Card），Savings account（储蓄账户，可选瑞法或欧元），PostFinance Card （debit card）, Mastercard Value （prepaid）或者 Classic/Standard credit card | ZKB Bildung plus Konto（支付账户），ZKB Bildung plus Sparkonto（储蓄账户），ZKB Visa Debit STUcard（与支付账户绑定），Basic/Standard credit card or Prepaid Mastercard |
 | 开户       | 可以[在线开户](https://www.ubs.com/ch/en/private/accounts-and-cards/bundles/key4.html#download-app)，线下的话去离住址最近的分行填一些表就可以了                                                                                | 可以[在线开户](https://www.postfinance.ch/en/private/products/accounts/personal-account-chf/open-a-private-account-in-chf.html)，线下的话填一些表就可以了                                   | [ZKB学生套餐在线开户](https://www.zkb.ch/de/private/konten-karten/pakete-jugendliche-studierende/zkb-student.html)，线下的话填一些表就可以了                        |
 | 存款利息     | UBS Personal Account: 100000瑞法以下：0.10%。UBS Savings Account: 2023年五月一日起：50000瑞法以下：0.75%。50000瑞法以上：0.25%                                                                                             | Student Account: 25000瑞法或15000欧元以下: 0.25%。Youth savings account：25000瑞法/ 15000欧元以上：0.75%（CHF）/0.5%（EUR）                                                                  | 支付账户：25000瑞法以下：0.25%。储蓄账户：25000瑞法以下：0.75%。250000瑞法以下：0.25%                                                                                     |
 | 免费存取款地点  | UBS的ATM机                                                                                                                                                                                           | PostFinance的ATM机，邮局/Migros/Manor/Spar/SBB/Coop Pronto Shops/Denner（主要是超市和商店）也可以免费取款                                                                                      | ZKB自己的取款机                                                                                                                                      |
@@ -38,7 +40,7 @@
 
 ^
 
-#### **2. 虚拟银行**
+### **2. 虚拟银行**
 
 无实体店面，主要通过手机app完成操作。
 
@@ -85,3 +87,4 @@
 > 马贤哲
 
 ^
+关于银联境外ATM取现，每卡每年银联取现限额为10万人民币等值外汇，每卡每天限制为1万元人民币等值外汇。“银联汇率”的瑞士法郎价格每天更新一次，约为北京时间下午16:30。注意！在国内建行或其他银行存的瑞郎在瑞士无法直接取现。建议在国内开通网银，在瑞士办好银行卡后可将国内的存款转到这边的银行卡
