--- a/办理“迁入”（首次住址申报）.md
+++ b/办理“迁入”（首次住址申报）.md
@@ -18,12 +18,12 @@
 
 #### **1.2 瑞士以外国家迁入苏黎世州人员的首次申报**
 *（所有从国内首次前来苏黎世留学的同学均属此类）*
-> [warning] 【学联提醒】从瑞士以外的国家迁入苏黎世州，且居住地在苏黎世市区的：
+> [warning] 【学联提醒】从**瑞士以外的国家迁入苏黎世州**，且**居住地在苏黎世市区**的：
 > - 无论选择哪一人口登记办公室，都**必须预约**。办理当天，可以较预约时间稍早到达，但**万万不能迟到**。此外，在8-9月的留学生入境高峰期，落地后再预约可能只有非常靠后日期可供选择。因此，如在入境前已找到房且已经签署租房合同/确认会签署租房合同，建议**根据入境日期尽早预约**。
 > - 若未办理预约直接前往，则会由人口登记办公室的工作人员现场分配时间并签发预约单，届时须凭预约单上的时间再次前往对应的人口登记办公室办理住址申报。
-> - 若所预约时间/被分配时间超过入境后14天限制的，须按前文所述，**额外联系人口登记办公室说明情况**
-##### **1.2.1 对于居住在市区的学生**
-对于居住地在苏黎世市区，且是学生身份（本科/硕士/博士）的，应于抵达苏黎世州后14天内**凭预约**前往
+> - 若所预约时间/被分配时间超过入境后14天限制的，须按前文所述，**额外联系对应的人口登记办公室说明情况**
+##### **1.2.1 对于居住在市区的ETH/UZH学生**
+对于居住地在苏黎世市区，且是ETH/UZH学生身份（本科/硕士/博士）的，应于抵达苏黎世州后14天内**凭预约**前往
 - **ETH&UZH留学生专用人口登记办公室 [Residents' Registration Office (Student Administrations)]**
 （该人口登记办公室**仅于8-9月新生入学季开放**）
 ➢ [预约链接](https://www.etermin.net/unieth)
@@ -37,8 +37,8 @@
 进行住址申报。
 一般，学生应**优先选择前者**办理首次住址申报，此处人流量较小，**预约可用时间较多**。选择前者的，预约后应**立即填写[表格](https://www.etermin.net/r/7105/RegistrationForm.pdf)并发送给students@zuerich.ch**以加快后续处理速度。
 
-##### **1.2.2 对于居住在市区的非学生**
-对于居住地在苏黎世市区，但不是学生身份的（例如博后/研究助理/研究员等）应于抵达苏黎世州后14天内**凭预约**前往**南城人口登记办公室（Personenmeldeamt Zürich Süd）**（[预约链接](<https://www.etermin.net/personenmeldeamtsued?lang=en>)；地址：Stadthausquai 17, 8001 Zürich / 市政）进行住址申报。
+##### **1.2.2 对于居住在市区的ETH/UZH学生以外人员**
+对于居住地在苏黎世市区，但不是学生身份的（例如**博后/研究助理/研究员等**），或是ETH/UZH以外大学的学生的，应于抵达苏黎世州后14天内**凭预约**前往**南城人口登记办公室（Personenmeldeamt Zürich Süd）**（[预约链接](<https://www.etermin.net/personenmeldeamtsued?lang=en>)；地址：Stadthausquai 17, 8001 Zürich / 市政厅）进行住址申报。
 
 ##### **1.2.3 对于居住在郊区的人员**
 如居住地在苏黎世郊区的，必须于抵达苏黎世后14天内前往所在区县的人口登记办公室进行住址申报，具体请参见所在区县的人口登记办公室官网。如不明确自己所在区县或不明确自己住址所对应人口登记办公室的，可直接询问房东或在Google上以 **”住址邮编+Personenmeldeamt“ 为关键词**进行搜索。
