--- a/常用租房渠道及其流程.md
+++ b/常用租房渠道及其流程.md
@@ -2,6 +2,8 @@
 
 > [warning] 【声明】学联只提供信息整理，对本章节所有租房平台仅做推荐，不参与任何租房交易过程，不承担任何风险责任。
 
+> [info] 本章节的表格内容使用电脑阅读体验更佳
+
 > [info] 【学联提醒】
 > - 找房前，欢迎查看学联论坛[租房避雷贴](https://forum.acssz.org/d/794-zu-fang-bi-lei-tie)
 > - 考虑到苏黎世的租房市场形势，对于秋季入学的新生，一般**4-5月即可开始找房**，结合自身情况考虑房租、通勤、交通费等因素，筛选适合自己的房子，以尽量**避开7-11月的苏黎世找房高峰**
