--- a/行前-国内银行卡相关.md
+++ b/行前-国内银行卡相关.md
@@ -39,3 +39,4 @@
 * 额外手续费：在一些特殊情况下，例如提现、透支等，招商银行全币种信用卡会收取额外的手续费，需要持卡人注意避免。
 
 ^
+关于银联境外ATM取现，每卡每年银联取现限额为10万人民币等值外汇，每卡每天限制为1万元人民币等值外汇。“银联汇率”的瑞士法郎价格每天更新一次，约为北京时间下午16:30。注意！在国内建行或其他银行存的瑞郎在瑞士无法直接取现。建议在国内开通网银，在瑞士办好银行卡后可将国内的存款转到这边的银行卡
