--- a/10申请签证.md
+++ b/10申请签证.md
@@ -2,7 +2,7 @@
 
 > [info] 本章节最近更新于：2023年XX月XX日
 
-> [danger]【学联提醒】*对于“申请签证”这件可以一票决定未来人生走向的大事上，学联强烈推荐**直接且仔细阅读官方信息来源***，*包含[苏黎世州移民局](https://www.zh.ch/de/migration-integration/einreise/einreise-ohne-erwerbstaetigkeit-fuer-drittstaatsangehoerige.html)，[ETH](https://ethz.ch/en/studies/international/after-admission/immigration/visa.html)，[UZH](https://www.uzh.ch/cmsssl/en/studies/application/entry/guidelines.html)，[瑞士驻华使领馆](https://www.eda.admin.ch/countries/china/en/home/visa/entry-ch/more-90-days/documents-national.html)等。以下仅为针对它们的简单总结与梳理，我们强烈建议**直接阅读相关原文并获取信息***！
+> [danger]【学联提醒】*对于“申请签证”这件可以一票决定未来人生走向的大事上，学联强烈推荐**直接且仔细阅读官方信息来源***，*包含[苏黎世州移民局](https://www.zh.ch/de/migration-integration/einreise/einreise-ohne-erwerbstaetigkeit-fuer-drittstaatsangehoerige.html)，[ETH](https://ethz.ch/en/studies/international/after-admission/immigration/visa.html)，[UZH](https://www.uzh.ch/cmsssl/en/studies/application/entry/guidelines.html)，[瑞士驻华使领馆](https://www.eda.admin.ch/countries/china/en/home/visa/entry-ch/more-90-days/documents-national.html)等。以下仅为针对它们的简单总结与梳理，我们强烈建议**直接阅读相关原文并获取信息**！*
 
 > [warning] 本章节后期考虑简要添加以下内容（如必要，部分信息将请新生提供）：
 >
@@ -16,7 +16,7 @@
 > * 部分项目的“受条件录取”转“无条件录取”过程中可能遇到的签证相关问题
 > * 准许最早入境日期相关
 
-#### **1. 需要申请签证的人员**
+### **1. 需要申请签证的人员**
 
 根据瑞士相关法律法规，以下人员赴瑞留学**不需要**办理签证：
 
@@ -35,14 +35,14 @@
 
 > [info] *以下内容**仅适用于在中国（北京、上海、广州、香港）办理签证人员***，*同时**仅针对就读苏黎世州高等院校人员***。*如在中国、瑞士以外的第三国办理签证的，或是就读瑞士中学的，或是就读苏黎世州以外的高等院校的，流程和所需材料可能有所不同，请以当地移民局、瑞士驻当地使领馆公告及校方要求为准*。
 
-#### **2. 申请签证的时间、地点及预约方式**
+### **2. 申请签证的时间、地点及预约方式**
 
-##### **2.1 关于申签时间**
+#### **2.1 关于申签时间**
 
 * 对于**本科与硕士**学生，在收到录取通知书后即可着手准备申请签证所需的材料。ETH官网推荐**最晚在计划入境前3个月**递交申请。理论上，整个审核过程理论需 8-12 周；而根据经验，实际审核时长约为1个月。
 * 对于**博士**学生，因需要的签证类型为工作签，必须由学校代为申请（实际操作上一般由组内秘书代为申请）。
 
-##### **2.2 关于申签地点及预约方式**
+#### **2.2 关于申签地点及预约方式**
 瑞士在中国设有一个大使馆（北京）和四个总领馆（上海、广州、成都、香港）（其中，瑞士驻成都总领馆领区的签证业务由北京的瑞士驻华大使馆代管），**关于各使领馆对应领区（签证业务受理范围）和预约链接可参考**[Switzerland and China - Where to apply for a national visa](https://www.eda.admin.ch/countries/china/en/home/visa/entry-ch/more-90-days/where-to-apply-national.html)。
 使领馆收到申请材料（具体见下文）后，会将其转交给苏黎世州移民局，由移民局负责审核签证材料并决定是否发放签证。即：最终决定权在苏黎世州移民局，使领馆仅负责转交材料并在移民局批准后通知前往贴签。苏黎世州移民局对于签证申请的相关政策法规可参见：[Einreise ohne Erwerbstätigkeit für Drittstaatsangehörige](https://www.zh.ch/de/migration-integration/einreise/einreise-ohne-erwerbstaetigkeit-fuer-drittstaatsangehoerige.html)
 
