--- a/11行李准备.md
+++ b/11行李准备.md
@@ -16,15 +16,17 @@
 ### **2. 必备物品**
 *（不带这些你出来干啥\~瑞士没有获取渠道）*
 
-- **证件：** 护照、身份证、驾照及公证件（如有）
+- **证件：** 护照、身份证、驾照及其公证件（如有）等
 - **租房和学业相关文件（如有）**：租房合同、录取通知书等
-- **证件照**：护照规格（35\*45）证件照5-8张。办理交通卡、签证和换护照时等情况需要。虽然证件照自动拍摄亭很普遍，但价格略贵，而且拍出来巨丑
-- **现金**：2000瑞郎左右基本够用。
-*如果是UZH新生的话请至少额外准备1000CHF左右的现金用于缴纳第一笔学费，因为交学费的POST似乎没法刷信用卡和银联卡，而那会你也肯定没有办出本地的银行卡。*
-- **手机**：不用多说，没了它好多事干不了，国内手机在这边使用没问题。就算本地购买签约机也需要先办理居留证，建议国内带一个备用。注意国内与中国移动/联通/电信签约的手机，或充话费送手机的手机，来到欧洲这里也许不能用3G或4G网络，只能用2G
-- **银联、信用卡**：关于银联境外ATM取现，每卡每年银联取现限额为10万人民币等值外汇，每卡每天限制为1万元人民币等值外汇。“银联汇率”的瑞士法郎价格每天更新一次，约为北京时间下午16:30。注意！在国内建行或其他银行存的瑞郎在瑞士无法直接取现。建议在国内开通网银，在瑞士办好银行卡后可将国内的存款转到这边的银行卡
-※瑞士不会有银行通过邮件方式通知你账号有异常情况，任何以银行名义给你发的邮件建议统统删除
-
+*录取通知书等文件建议随身携带，以备航司或边检查验。*
+- **证件照**：护照规格（35\*45）证件照5-8张
+*办理交通卡、签证和换护照时等情况需要。虽然证件照自动拍摄亭很普遍，但价格略贵且效果较丑。*
+- **现金**：2000瑞郎左右基本够用
+*对于UZH新生，鉴于缴纳学费的邮局可能不支持信用卡/银联卡支付，且届时也没有瑞士的银行卡，请至少**额外准备1000瑞郎左右的现金用于缴纳首笔学费**。*
+- **手机**
+*国内手机可在瑞士使用。即使计划在瑞士购买签约机，也需要先办理居留证，因此同样需要从国内带一部（备用）手机。
+此外，国内与中国移动/联通/电信签约的手机（俗称“签约机”），或充话费赠送的手机，在欧洲可能无法使用3G/4G网络，只能用2G。*
+- **银行卡（储蓄卡/信用卡）**
 - **转换插头**：瑞标和万用插头。真正居家旅行必备。不嫌少。请至少携带两个，一个日常使用一个备用。，当地买很贵。或者买一个带瑞士插头的拖线板
 建议搜索“瑞标”转接头。所需数量需考虑以下因素：
 ① 需转换插头的电器数量
