--- a/06结语&学联服务.md
+++ b/06结语&学联服务.md
@@ -61,5 +61,5 @@
 ***
 
 *本《留学指南》由苏黎世中国学生学者联合会新生工作组编写、发布。*
-*资料搜集与内容编写：杨锦涛、徐思婕、赵逸飞、杜超瑜、陈雨航、李圆、任逍遥、杨晨宇、张家萌、俞玥、王尊、田竹仝、范梦瑶、张堃、李许雯佳、凌晞、陈小雨及陈庆瑄、彭雅莹、岳妮、李敬淇*
-*技术保障：陈小雨、崔玺萌、杨锦涛*
+*资料搜集与内容编写（排名不分先后）：杨锦涛、徐思婕、赵逸飞、杜超瑜、陈雨航、李圆、任逍遥、杨晨宇、张家萌、俞玥、田竹仝、范梦瑶、凌晞、王尊、张堃、李许雯佳、陈小雨及陈庆瑄、彭雅莹、岳妮、李敬淇、于之赫*
+*技术保障（排名不分先后）：陈小雨、崔玺萌、杨锦涛*
