--- a/交通及出行相关.md
+++ b/交通及出行相关.md
@@ -1,7 +1,9 @@
 > [success] 本章作者：杨晨宇、赵逸飞
 
 ### **1. 概述**
-在苏黎世，得益于发达的公共交通系统，大多数同学选择搭乘公共交通上下学及进行其他必要通勤（如办事、购物等），也有少量同学选择骑乘自行车/电动滑板车（e-scooter）
+在苏黎世，得益于发达的公共交通系统，大多数同学选择搭乘公共交通上下学及进行其他必要通勤（如办事、购物等），也有少量同学骑乘自行车/电动滑板车（e-scooter）等，而驾驶汽车进行日常通勤对绝大部分同学的需求和环境而言并不方便。
+
+> [info] 【学联提醒】鉴于各类通勤方式的优劣势与所住地区、日常通勤频率及路线等强烈相关，建议在抵达苏黎世后再根据实际体验和需求选择交通方案。
 
 ^
 ### **2. 搭乘公共交通出行**
