--- a/交通及出行相关.md
+++ b/交通及出行相关.md
@@ -1,6 +1,6 @@
 > [success] 本章作者：杨晨宇、赵逸飞
 
-> [warning] 【学联提醒】本章节关于优惠套餐的推荐介绍仅供参考，请结合自身实际需求权衡选择！
+> [warning] 【学联提醒】本章节关于公共交通优惠套餐的推荐介绍仅供参考，请结合自身实际需求权衡选择！
 
 ### **1. 概述**
 在苏黎世，得益于发达的公共交通系统，大多数同学选择搭乘公共交通上下学及进行其他必要通勤（如办事、购物等），也有少量同学选择骑乘自行车/电动滑板车（e-scooter）等，而驾驶汽车进行日常通勤对绝大部分同学的需求和环境而言并不方便。
