Update 04学校与学业相关.md, 05结语&学联服务.md, 12国内手机及电话卡.md, 13赴瑞机票.md, ETH行前材料发放.md, SUMMARY.md, “户口”的注销.md, 三、落地安顿和在苏生活.md, 二、找房租房.md, 住址变更申报.md, 公共交通系统.md, 共享单车/滑板车.md, 关于“户口”和住址申报.md, 关于交通和出行.md, 关于人身财产安全.md, 关于垃圾分类.md, 关于就医.md, 关于居留证和护照.md, 关于心理咨询.md, 关于快递服务.md, 关于瑞士保险.md, 关于购物和消费.md, 关于跨境出行.md, 关于邻居噪音扰民的应对.md, 关于驾照.md, 出租车/网约车.md, 家具的置办和搬家相关.md, 居留证的延期.md, 居留证的遗失补发.md, 托运行李丢失处理.md, 护照的换发和补发.md, 瑞士电话卡的办理和使用.md, 瑞士银行卡的办理和使用.md, 自购单车-滑板车.md, 落地后需办理事项一览.md, 行前-国内银行卡相关.md, 选课与考试.md, 首次办理“户口”.md, 首次办理居留证.md Delete 03落地安顿.md, 04生活相关.md, 05学业相关.md, 06结语&学联服务.md, 10行李丢失处理.md, 23大学相关.md, 27保险及豁免.md, 28居留证的首次办理.md, 30出入境相关.md, 31苏黎世消费与邮寄.md, 32医疗相关.md, 33心理咨询.md, 34证照相关.md, 35“户口”相关.md, 37人身财产安全.md, ETH相关.md, UZH相关.md, 交通及出行相关.md, 办理“迁入”（首次住址申报）.md, 家具的置办.md, 居住和日常出行相关.md, 瑞士电话卡的办理.md, 瑞士银行卡的办理.md

--- a/13赴瑞机票.md
+++ b/13赴瑞机票.md
@@ -1,6 +1,6 @@
 > [success] 本章作者：赵逸飞
 
-> [info] 【学联提醒】*如想寻找同一航班伙伴，请查看*[学联论坛2023航班“找伴儿”贴](https://forum.acssz.org/d/1005)；*如需要接机服务，请在*[学联论坛2023接机供求贴](https://forum.acssz.org/d/950)*内发布需求，或直接联系帖子中提供接机的同学*。
+> [info] 【学联提醒】*如想寻找同一航班伙伴，请查看[学联论坛2023航班“找伴儿”贴](https://forum.acssz.org/d/1005)；如需要接机服务，请在[学联论坛2023接机供求贴](https://forum.acssz.org/d/950)内发布需求，或直接联系帖子中提供接机的同学。*
 
 ### **1. 关于安排赴瑞行程、购买赴瑞机票的一些tips/注意事项**
 
