--- a/关于心理咨询.md
+++ b/关于心理咨询.md
@@ -1,6 +1,6 @@
 > [success] 本章作者：杜超瑜
 
-> [info]【学联提醒】学校的心理咨询中心提供的是心理咨询，而**不是心理或神经科治疗**。如果需要专业的治疗，可以通过学校的心理咨询中心寻找心理医生进行治疗。
+> [info]【学联提醒】*学校的心理咨询中心提供的是心理咨询，而**不是心理或神经科治疗**。如果需要专业的治疗，可以通过学校的心理咨询中心寻找心理医生进行治疗。*
 
 ### **1. ETH&UZH心理咨询服务介绍**
 - ETH与UZH为在读的同学们提供免费的心理咨询，每次的心理咨询时长为50分钟左右，语言可选择德语或英语。具体可参考：[ETH&UZH: Psychological Counseling Services](https://www.pbs.uzh.ch/en.html)
