--- a/关于购物和消费.md
+++ b/关于购物和消费.md
@@ -1,4 +1,4 @@
-> [success] 本章作者：凌晞、徐思婕
+> [success] 本章作者：凌晞、徐思婕、李欣怡
 
 > [warning] 本章节部分内容需要重新排版与核实
 
@@ -70,13 +70,3 @@
 
 
 **②二手市场为了环保和碳中和，且每年都有大量老生完成学业回国卖闲置二手家具，新生落地不用重复添置新家具，跟学长学姐购买二手家具是最优惠划算的方式，苏黎世也有很多二手群，大家都会优先把闲置用品放在群里出售。学校有专门的二手交易网站，UZH 和 ETH 的二手交易平台 [www.marktplatz.uzh.ch/borse/](http://www.marktplatz.uzh.ch/borse/)在苏黎世的Helvetiaplatz 周六有旧货集市,是购买自行车、电器甚至旧衣服等的好去处。二手店的分布较为分散，比如在位于Wehntalerstrasse 530土超隔壁就有一家。现在很火的Brockenhaus（苏黎世有好几家,主火车站旁边有一家较大的店面,地址：Neugasse 11, 8005 Zürich，网址:www\.zuercher-brockenhaus.ch）和Caritas。高评分二手衣物交易店：Bogen C（Viaduktstrasse 91, 8005 Zürich，网址:<http://www.caritas-zuerich.ch/caritaszh/hilfe-finden/guenstiger-leben/caritas-secondhand-laeden-viel-mode-fuer-wenig-geld>）。订阅Ron Orp邮件，每周都会推送在苏黎世举办的活动，有时也会有关于新二手市场和租房的信息。也可以登录他们的网站查看相关信息：<https://www.ronorp.net>**
-
-
-
-### **6. 邮寄**
-
-> [warning] 本章节后期考虑添加自国内向瑞士邮寄物品的相关内容，或使用外链形式。
-
-瑞士邮局是Die post，随处可见。普通包裹15-20天到国内，邮局有具体资费宣传页，可以去那里拿。邮寄10kg到国内差不多是80多瑞郎。如果在康斯坦茨买东西，往家里寄奶粉，礼物之类的东西，可以在康斯坦茨的DHL邮寄，费用会比瑞士邮局便宜些，10kg是60欧元左右。邮局都有打包材料可以买，纸箱子等并不贵，一个纸箱子约三四欧元，也可以跟药店等要。再省钱的方式就是可以在淘宝上买DHL包裹单，自己打印出来，到时候贴到箱子上直接交给DHL就可以，操作方法直接在淘宝上搜DHL包裹单就可以。Die post 和DHL一些包裹可以查到物流单号，具体可以查看官网和咨询邮局。
-
-<https://www.post.ch/de>
