--- a/首次办理“户口”.md
+++ b/首次办理“户口”.md
@@ -51,7 +51,7 @@
 ➢ **北城人口登记办公室**（Personenmeldeamt Zürich Nord，地址：Hofwiesenstrasse 370, 8050 Zürich / Oerlikon火车站）或
 ➢ **西城人口登记办公室**（Personenmeldeamt Zürich West，地址：Hohlstrasse 35, 8004 Zürich / Helvetiaplatz）
 进行住址申报。该业务无须预约，直接前往办理即可。
-* 如居住地在苏黎世郊区的，必须于抵达苏黎世后14天内前往所在区县的人口登记办公室进行住址申报，具体请参见所在区县的人口登记办公室官网。如不明确自己所在区县或不明确自己住址所对应人口登记办公室的，可直接询问房东或在Google上以 **”住址邮编+Personenmeldeamt“ 为关键词**进行搜索。
+* 如居住地在苏黎世郊区的，必须于抵达苏黎世后14天内前往所在区县的人口登记办公室进行住址申报，具体请参见所在区县的人口登记办公室官网。一般，若官网上未明确说明需要预约的，如不明确自己所在区县或不明确自己住址所对应人口登记办公室的，可直接询问房东或在Google上以 **”住址邮编+Personenmeldeamt“ 为关键词**进行搜索。
 
 ^
 
