--- a/05结语&学联服务.md
+++ b/05结语&学联服务.md
@@ -1,10 +1,10 @@
 ### **1. 结语**
 
-首先，我们向所有参与本《指南》编辑的同学、在群聊中为本《指南》的内容提出宝贵意见或建议的同学、以及一直以来对我们的工作给予支持的同学表示最诚挚的谢意！
-尽管我们在有限时间内已尽最大努力搜集、整理并提供准确、丰富、全面的信息，但仍无法完全避免出现遗漏、错误与疏忽。为此，如对本《指南》有任何修改意见/建议的，或想要参与编辑的，欢迎随时通过<info@acssz.org>联系我们。同时，欢迎随时在群聊中分享相关经验。
+首先，我们向所有参与本《手册》编辑的同学、在群聊中为本《手册》的内容提出宝贵意见或建议的同学、以及一直以来对我们的工作给予支持的同学表示最诚挚的谢意！
+尽管我们在有限时间内已尽最大努力搜集、整理并提供准确、丰富、全面的信息，但仍无法完全避免出现遗漏、错误与疏忽。为此，如对本《手册》有任何修改意见/建议的，或想要参与编辑的，欢迎随时通过<info@acssz.org>联系我们。同时，欢迎随时在群聊中分享相关经验。
 感谢大家的理解与支持！
 苏黎世中国学生学者联合会新生工作组
-2023年7月
+2023年9月
 
 ^
 
@@ -61,5 +61,5 @@
 ***
 
 *本《留学指南》由苏黎世中国学生学者联合会新生工作组编写、发布。*
-*资料搜集与内容编写（排名不分先后）：杨锦涛、徐思婕、赵逸飞、杜超瑜、陈雨航、李圆、任逍遥、杨晨宇、张家萌、俞玥、田竹仝、范梦瑶、凌晞、王尊、张堃、李许雯佳、陈小雨及陈庆瑄、彭雅莹、岳妮、李敬淇、于之赫*
+*资料搜集与内容编写（排名不分先后）：杨锦涛、徐思婕、赵逸飞、杜超瑜、陈雨航、李圆、任逍遥、杨晨宇、张家萌、俞玥、田竹仝、范梦瑶、凌晞、王尊、张堃、李许雯佳、陈小雨及陈庆瑄、彭雅莹、岳妮、李敬淇、于之赫、李欣怡*
 *技术保障（排名不分先后）：陈小雨、崔玺萌、杨锦涛*
