Update .topwrite/assets/image_1693777734285.png, 02落地安顿.md, 关于瑞士保险.md

--- a/关于瑞士保险.md
+++ b/关于瑞士保险.md
@@ -16,24 +16,24 @@
 
 ### **1. 瑞士强制保险义务（VVG/KVG）介绍**
 
-- **什么是VVG和KVG？**
-VVG = Versicherungsvertragsgesetz = 瑞士保险合同法
-KVG = Bundesgesetz über die Krankenversicherung = 瑞士医保法
-- **健康保险在瑞士是强制性的吗**？
-是的。任何在瑞士逗留超过3个月的人都必须购买健康保险。确保你有足够的保险是你自己的责任。
-- **如果我在3个月内没有购买学生健康保险（VVG）会怎样**？
-你将被强制投保，也就是说，你将被当局分配到一个瑞士健康保险基金（KVG）。这时，每月的保险费通常是**几百瑞士法郎**——不要错过入境3个月内的VVG购保及KVG豁免期限！
-- **如果我在3个月后才投保健康保险，我可以省钱吗**？
-不能，保险合同必须追溯到入境之日。   
-- **如果我在购买健康保险之前生病或发生事故会怎样**？
-你在事故/疾病发生后选择的保险将追溯到你入境之日。所有的健康保险公司都有义务将你纳入基本保险，而无需进行健康检查。如果你想购买学生保险套餐（根据VVG），我们建议你在抵达后尽快办理。
-- **我可以在出发前申请瑞士健康保险吗？**
-不可以，你应该等到你到达瑞士并得到了人口登记办公室的住址申报确认函（Meldebestätigung）（详见[本篇《办理“迁入”》章](<办理“迁入”（首次住址申报）.md>)）之后再申请。然后，你居住地的主管部门会通知你医疗保险的义务。
-如果你住在苏黎世市区，当你在人口登记办公室申报住址时，你会收到一封关于苏黎世强制医疗保险的信息函。请遵循信中的指示。请参考样本信:attachment[sample-letters.pdf]{src=".topwrite/assets/sample-letters.pdf" size="1.75 MB"}
-如果你住在苏黎世郊区，程序因市镇的不同而不同。当你在人口登记办公室申报住址并申请居留证的时候，你也应该询问那里关于医疗保险的通常程序。
-- **我想了解更多关于瑞士医疗保险的信息。我在哪里可以得到更多信息**？
-联邦公共卫生局提供了一本内容非常丰富的手册：
-:attachment[broschuere-sie-fragen-wir-antworten-d.pdf]{src=".topwrite/assets/broschuere-sie-fragen-wir-antworten-d.pdf" size="377.12 kB"}
+* **什么是VVG和KVG**？
+  VVG = Versicherungsvertragsgesetz = 瑞士保险合同法
+  KVG = Bundesgesetz über die Krankenversicherung = 瑞士医保法
+* **健康保险在瑞士是强制性的吗**？
+  是的。任何在瑞士逗留超过3个月的人都必须购买健康保险。确保你有足够的保险是你自己的责任。
+* **如果我在3个月内没有购买学生健康保险（VVG）会怎样**？
+  你将被强制投保，也就是说，你将被当局分配到一个瑞士健康保险基金（KVG）。这时，每月的保险费通常是**几百瑞士法郎**——不要错过入境3个月内的VVG购保及KVG豁免期限！
+* **如果我在3个月后才投保健康保险，我可以省钱吗**？
+  不能，保险合同必须追溯到入境之日。   
+* **如果我在购买健康保险之前生病或发生事故会怎样**？
+  你在事故/疾病发生后选择的保险将追溯到你入境之日。所有的健康保险公司都有义务将你纳入基本保险，而无需进行健康检查。如果你想购买学生保险套餐（根据VVG），我们建议你在抵达后尽快办理。
+* **我可以在出发前申请瑞士健康保险吗**？
+  不可以，你应该等到你到达瑞士并得到了人口登记办公室的住址申报确认函（Meldebestätigung）（详见[本篇《办理“迁入”》章](办理“迁入”（首次住址申报）.md)）之后再申请。然后，你居住地的主管部门会通知你医疗保险的义务。
+  如果你住在苏黎世市区，当你在人口登记办公室申报住址时，你会收到一封关于苏黎世强制医疗保险的信息函。请遵循信中的指示。请参考样本信:attachment[sample-letters.pdf]{src=".topwrite/assets/sample-letters.pdf" size="1.75 MB"}
+  如果你住在苏黎世郊区，程序因市镇的不同而不同。当你在人口登记办公室申报住址并申请居留证的时候，你也应该询问那里关于医疗保险的通常程序。
+* **我想了解更多关于瑞士医疗保险的信息。我在哪里可以得到更多信息**？
+  联邦公共卫生局提供了一本内容非常丰富的手册：
+  :attachment[broschuere-sie-fragen-wir-antworten-d.pdf]{src=".topwrite/assets/broschuere-sie-fragen-wir-antworten-d.pdf" size="377.12 kB"}
 
 ^
 
@@ -69,11 +69,11 @@ KVG = Bundesgesetz über die Krankenversicherung = 瑞士医保法
 
 ^
 
-**具体豁免步骤**，请见[上述网页](https://ethz.ch/de/studium/international/nach-ankunft/krankenversicherung/befreiung.html)第2项：
+**具体豁免步骤**，请见[上述网页](https://ethz.ch/en/studies/international/after-arrival/health-insurance/exemption.html)第2.B.项：
 
 With a new Swiss Student Health Insurance without income
 
-![](.topwrite/assets/image_1682197206050.png =480)
+![](.topwrite/assets/image_1693777734285.png =454)
 
 ^
 
