--- a/居留证的延期.md
+++ b/居留证的延期.md
@@ -13,13 +13,26 @@
 
 > [info] 【学联提醒】*办理居留证延期不需要前往移民局，也不需要重新拍照或进行指纹录入*！
 
-* 填妥的“延期信函”（可请工作人员现场指导填写）
+* 填妥的“延期信函”（可在人口登记办公室请工作人员现场指导填写）
 * 护照
 * 现有居留证
 * 最新的学期注册证明
-* 办理费用：102.00瑞郎（接受现金/刷卡）
+* 办理费用：102.00瑞郎（支持现金但**不支持找零**；支持刷卡）
 
-居住地在苏黎世市区的，无需预约，可直接携带齐全材料前往市区任一人口登记办公室办理（地址信息详见[25 住址申报（“户口”）](25住址申报（“户口”）.md)）；居住地在苏黎世郊区的，请参考所在地的人口登记办公室。
+居住地在苏黎世市区的，无需预约，可直接携带齐全材料前往市区**任一人口登记办公室**办理：
+- **南城人口登记办公室（Personenmeldeamt Zürich Süd）**
+地址：Stadthausquai 17, 8001 Zürich（市政厅）
+网站：[Personenmeldeamt Zürich Süd](<https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/kontakt-oeffnungszeiten/kontakte-und-oeffnungszeiten-pma/kb01.html>)
+- **北城人口登记办公室（Personenmeldeamt Zürich Nord）**
+地址：Hofwiesenstrasse 370, 8050 Zürich（Oerlikon火车站）
+网站：[Personenmeldeamt Zürich Nord](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/kontakt-oeffnungszeiten/kontakte-und-oeffnungszeiten-pma/kb11.html)
+- **西城人口登记办公室（Personenmeldeamt Zürich West）**
+地址：Hohlstrasse 35, 8004 Zürich（Helvetiaplatz）
+网站：[Personenmeldeamt Zürich West](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/kontakt-oeffnungszeiten/kontakte-und-oeffnungszeiten-pma/kb04.html)
+
+3个人口登记办公室的联系电话均为：+41 44 412 15 15
+
+居住地在苏黎世郊区的，请参考所在地的人口登记办公室。
 
 ^
 ### **3.  额外材料的递交/补交**
