--- a/关于瑞士保险.md
+++ b/关于瑞士保险.md
@@ -14,7 +14,7 @@
 
 ^
 
-### **1. 瑞士强制保险义务（VVG/KVG）介绍**
+#### **1. 瑞士强制保险义务（VVG/KVG）介绍**
 
 * **什么是VVG和KVG**？
   VVG = Versicherungsvertragsgesetz = 瑞士保险合同法
@@ -37,7 +37,7 @@
 
 ^
 
-### **2. 国际学生的保险选择——VVG保险**
+#### **2. 国际学生的保险选择——VVG保险**
 
 **是否有实惠的学生保险套餐可供选择**？
 
