Update 04学校与学业相关.md, ETH的选课与考试.md, SUMMARY.md, 关于ETH学生卡.md, 关于考试.md, 关于选课.md, 常用网站/app.md, 第三方申报义务.md, 自购单车-滑板车.md Delete 选课与考试.md

--- a/04学校与学业相关.md
+++ b/04学校与学业相关.md
@@ -1,3 +1,7 @@
 > [danger] 本篇结构和内容仍在调整优化中，影响阅读敬请谅解。
 
+因两校流程及政策不完全相同，本节按[ETH注册、选课与考试](ETH相关.md)和[UZH注册、选课与考试](UZH相关.md)两部分分别介绍。
+
+如果你想补充如ZHAW、ZHdK等大学的相关流程，请联系邮箱info@acssz.org，不胜感激！
+
 ::catalog
