--- a/首次办理“户口”.md
+++ b/首次办理“户口”.md
@@ -11,7 +11,7 @@
 #### **1.1 总体介绍**
 根据[相关法律法规](http://www2.zhlex.zh.ch/appl/zhlex_r.nsf/0/37FA9D3FAA0D5447C1257F1D004A8834/$file/142.1_11.5.15_91.pdf)，苏黎世州有着严格的住址申报制度，所有居民均有义务向政府申报自己的住址，其中**由国外（州外）新迁入的人员必须在抵达苏黎世州后14天内进行申报**。
 > [danger] 【学联提醒】
-> - 由于办理申报**需要提供租房合同**（见下文），若（预计）进入苏黎世州后14天内不能找到住处的，或是找到住处但因客观原因（如预约已满）无法按时进行申报的，必须**在此期限内联系临时住址对应的人口登记办公室**（见下文），向工作人员说明自己的情况，请工作人员进行临时记录，以免成为“黑户”。
+> - 由于办理申报**需要提供租房合同**（见下文），若（预计）进入苏黎世州后14天内不能找到住处的，或是找到住处但因客观原因（如预约已满）无法按时进行申报的，必须**在此期限内通过电话或邮件联系临时住址对应的人口登记办公室**（见下文），向工作人员说明自己的情况，请工作人员进行临时记录，以免成为“黑户”。
 >- 如不明确自己的住址是属于市区还是郊区的，可
 > ➢ **直接询问房东或室友**，或
 > ➢ **通过地址判定**：如地址邮编后为“Zürich”则代表该地址在市区，如为其他（如”Kloten“”Winterthur“等）则代表该地址在郊区；该名称即为住址所在市县名称。
