--- a/瑞士电话卡的办理和使用.md
+++ b/瑞士电话卡的办理和使用.md
@@ -1,6 +1,6 @@
 > [success] 本章作者：杨锦涛
 
-> [warning] *本章节仅介绍瑞士本地电话卡的办理，关于国内设备和SIM卡在国外的使用请参考[行前篇《国内手机及电话卡》章](<12国内手机及电话卡.md>)*。
+> [warning] *本章节仅介绍瑞士本地电话卡的办理，关于国内设备和SIM卡在国外的使用请参考*[行前篇《国内手机及电话卡》章](12国内手机及电话卡.md)。
 
 ### **1. 瑞士电信运营商简介**
 
@@ -21,7 +21,7 @@
 
 ^
 
-### **2. 关于预付卡（Prepaid）和合约卡（Postpaid）**
+### **2. 关于预付卡（Prepaid）和合约卡（Postpaid**）
 
 瑞士电话卡分为Prepaid Card（预付卡）和Postpaid Card（合约卡），目前瑞士约80%的用户均为Postpaid Card（合约卡）。
 
@@ -39,9 +39,9 @@
 
 关于每家公司的套餐，大家可在官网查看，根据自己的需求选择：
 
-- Sunrise → <https://www.sunrise.ch/de/home>
-- Swisscom → <https://www.swisscom.ch/de/privatkunden.html>
-- Salt → <https://www.salt.ch/en>
+* Sunrise → <https://www.sunrise.ch/de/home>
+* Swisscom → <https://www.swisscom.ch/de/privatkunden.html>
+* Salt → <https://www.salt.ch/en>
 
 但是，一个一个去官网对比套餐真的好麻烦呀\~
 
@@ -73,10 +73,8 @@
 
 由Prepaid卡（包括Lebara Prepaid和其它品牌Prepaid）或其它品牌Postpaid卡转为Sunrise Lebara Postpaid（携号转卡），**现仅需0瑞或10瑞激活费（Activation Fee**）。若选择12月合同，可**免去**59瑞Activation Fee；若选择0月合同，**仅需**10瑞Activation Fee即可实现转卡。**转卡后，可享受Lebara Postpaid Card各套餐的最低价**：
 
-^
-
-![](.topwrite/assets/newprice2.png)
-\**套餐价格随运营商活动有微小浮动，本表整理的价格为截至2023年7月10日的价格，实际套餐价格以激活prepaid/postpaid卡当日的价格为准*
+![](.topwrite/assets/20230908价格表.png =765)
+\**套餐价格随运营商活动有微小浮动，本表整理的价格为截至2023年9月8日的价格，实际套餐价格以激活prepaid/postpaid卡当日的价格为准*
 
 ^
 
