--- a/首次办理“户口”.md
+++ b/首次办理“户口”.md
@@ -75,7 +75,7 @@
 根据[苏黎世市政府相关要求](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/zuzug.html)，参考[ETH的相关介绍](https://ethz.ch/en/studies/international/after-arrival/residence-permit/applying.html)，从瑞士以外的国家迁入苏黎世州的人员在首次办理住址申报时须准备以下材料（居住在苏黎世郊区人员也可按此执行）：
 
 * 护照原件
-* 租房合同原件（如果你是转租合同，需要把二房东手里的原始合同也一起带过去，且最好二房东陪同前往）
+* 租房合同原件
 * 学期注册确认（Erweiterte Immatrikulationsbestätigung / Enrolment confirmation）
   *对于在ETH\&UZH留学生专用人口登记办公室办理首次申报的UZH学生，如尚未获得注册确认的，亦可使用UZH发放的Attestation代替*。
 * 182.00瑞郎 （支持现金但**不支持找零**；支持VISA/MASTER/银联刷卡）
