--- a/合同签署和房屋交接.md
+++ b/合同签署和房屋交接.md
@@ -1,8 +1,10 @@
 ### **2. 签署租房合同和房屋交接**
 
-* 对于私人房东，应尽量选择线下面对面签署合同。签署完成后，应一并完成钥匙的交接（房东应该给你钥匙）。
+* 对于私人房东，应尽量选择线下面对面签署合同。签署完成后，应一并完成钥匙的交接（房东应该给你钥匙）
 * 对于不动产管理公司（如Livit）、正规中介公司（如Intermezzo）、大型住房合作社（如WOKO，JUWO，WFSS），则有可能提前线上签合同，落地后再领取钥匙
 * 务必向房东确认房费是否包含水电网暖气电视等费用以及家具情况，并提前约定好家具的承接情况 （**是否需要付费承接家具**）
-* 租房合同一般为**德语**，因为德语合同在苏黎世才具备法律效力。如果**只有**英语合同，请一定提高警惕，对方很有可能是骗子。英语合同只能作为便于理解的参考文件，应同时准备一份具有法律效力的德语合同原件
+* 租房合同可以是**德语**或**英语**，两种语言的合同只要满足正规合同规范均可具有法律效力。但骗子一般会给英语合同，所以收到私人房东（非机构）给的英语合同时，需要多加留意
 * **在拿到钥匙打开房门那一刻之前，不要缴纳任何费用**（企业、中介及合作社的房源，如Livit，Intermezzo，WOKO，JUWO，WFSS房源等可酌情在拿到钥匙前交部分费用如押金，私人房东一定不要提前交钱）
 * 签完合同后安排房屋交接：房东或物业管理员应与你一同确认房间现有破损状况，记录在检查单上，并由双方签字确认。如果入住后你发现了检查单上未记录的破损，且确实之前就已经存在（并非由你造成），请尽快告知房东（一般一个月内有效），以免退租时出现不必要的纠纷。如有需要可购买房屋保险（household insurance）
+
+^
