--- a/首次办理“户口”.md
+++ b/首次办理“户口”.md
@@ -78,9 +78,12 @@
 * 租房合同原件（转租时为转租合同）
 * 学期注册确认（Erweiterte Immatrikulationsbestätigung / Enrolment confirmation）
   *对于在ETH\&UZH留学生专用人口登记办公室办理首次申报的UZH学生，如尚未获得注册确认的，亦可使用UZH发放的Attestation代替*。
+* 由房东签署的《新租客迁入
 * 182.00瑞郎 （支持现金但**不支持找零**；支持VISA/MASTER/银联刷卡）
   ➢ 申报确认函：40瑞郎
   ➢ 居留卡制证：142瑞郎
+
+此外，根据瑞士相关法律法规，方可
 
 ^
 
