Update .topwrite/assets/Auszugsanzeige Stadt Zürich.pdf, .topwrite/assets/Einzugsanzeige Stadt Zürich.pdf, 住址变更申报.md, 首次办理“户口”.md

--- a/住址变更申报.md
+++ b/住址变更申报.md
@@ -3,7 +3,15 @@
 #### **1. 住址变更申报**
 
 当住址发生变更时，同样需要进行申报。目前，苏黎世市区已经引入了[E-Umzug平台](https://www.eumzug.swiss/eumzugngx/global)供居民在线申报地址变更。但对于部分尚未接入[E-Umzug平台](https://www.eumzug.swiss/eumzugngx/global)的苏黎世郊区区县，仍需申报人**亲自前往**对应的人口登记办公室线下办理申报。
-在任何情况下，申报人都可以选择前往对应的人口登记办公室线下办理申报。线下办理申报应携带：护照、居留证（如有）、原有的申报确认函、新的租房合同以及足量资金等。
+在任何情况下，申报人都可以选择前往对应的人口登记办公室线下办理申报。线下办理申报应携带：护照、居留证（如有）、原有的申报确认函、新的租房合同、足量资金以及Einzugsanzeige & Auszugsanzeige（见下文）等。
+
+此外，根据瑞士相关法律法规，当有人员住址发生变更时，其原住址和现住址房东需要声明其对于该租客的迁出和迁入知情，此为所谓的“第三方申报义务”（Drittmeldepflicht）。涉及转租的，可以由二房东或原房东声明知情。房东声明知情的方式包含：
+- 线上声明知情：[声明链接](https://www.drittmeldung.ch/ui/#/home)；声明须在租客办理住址申报前进行
+- 线下声明知情：填写并签署
+  ➢ 《原租客迁出确认书》（Auszugsanzeige；苏黎世市的模板见:attachment[Auszugsanzeige Stadt Zürich.pdf]{src=".topwrite/assets/Auszugsanzeige Stadt Zürich.pdf" size="546.7 kB"}}，其他市县请参考当地政府官网）和/或
+  ➢ 《新租客迁入确认书》（Einzugsanzeige；苏黎世市的模板见:attachment[Einzugsanzeige Stadt Zürich.pdf]{src=".topwrite/assets/Einzugsanzeige Stadt Zürich.pdf" size="1.38 MB"}，其他市县请参考当地政府官网），并由租客在办理住址申报时携带
+
+苏黎世市对该政策的介绍见：[Drittmeldepflicht - Stadt Zürich](<https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/drittmeldepflicht.html>)；瑞士其他市县的政策与此相似，具体可参考当地政府官网。
 
 ^
 
@@ -43,19 +51,3 @@
 **情况五：苏黎世郊区→苏黎世郊区（不同区县**）
 须在离开原居住地后14天内前往原居住地所在市县的人口登记办公室办理注销，再在新居住地的人口登记办公室申报新的住址。
 如原居住地和新居住地所在市县均支持[E-Umzug](https://www.eumzug.swiss/eumzugngx/global)的，也可在线办理。在线办理完成的，无须再前往新居住地的人口登记办公室办理申报。
-
-^
-
-#### **2. 第三方申报义务（Drittmeldepflicht**）
-
-> [warning] *本章节内容的具体实施可能需要额外核实*
-
-根据苏黎世市法规，出租人（房东/中介/**二房东**）在房屋出租情况有变更时（即：原承租人搬出或有新的承租人搬入时等）需向社区所在的人口登记办公室报告房屋出租变动情况（[可在线完成](https://www.drittmeldung.ch/ui/#/home)）。
-
-与此同时，新承租人（包括**转租租客**）需要向社区所在的人口登记办公室申报住址（第一次申报住址需要线下办理，之后可使用[E-Umzug平台](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/onlineschalter/eumzug.html)）。
-
-> 苏黎世市的有关政策可参见：[Stadt Zürich Drittmeldepflicht](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/drittmeldepflicht.html)
-
-^
-
-
