--- a/首次办理“户口”.md
+++ b/首次办理“户口”.md
@@ -78,12 +78,16 @@
 * 租房合同原件（转租时为转租合同）
 * 学期注册确认（Erweiterte Immatrikulationsbestätigung / Enrolment confirmation）
   *对于在ETH\&UZH留学生专用人口登记办公室办理首次申报的UZH学生，如尚未获得注册确认的，亦可使用UZH发放的Attestation代替*。
-* 由房东签署的《新租客迁入
+* 由房东签署的《新租客迁入确认书》（Einzugsanzeige）（具体见下文）
 * 182.00瑞郎 （支持现金但**不支持找零**；支持VISA/MASTER/银联刷卡）
   ➢ 申报确认函：40瑞郎
   ➢ 居留卡制证：142瑞郎
 
-此外，根据瑞士相关法律法规，方可
+此外，根据瑞士相关法律法规，当有人员作为租客办理住址申报时，其房东需要声明其对于该租客的迁入知情，此为所谓的“第三方申报义务”（Drittmeldepflicht）。涉及转租的，可以由二房东或原房东声明知情。房东声明知情的方式包含：
+- 线上声明知情：[声明链接](https://www.drittmeldung.ch/ui/#/home)；声明须在租客办理住址申报前进行
+- 线下声明知情：填写并签署《新租客迁入确认书》（Einzugsanzeige；见:attachment[Einzugsanzeige Stadt Zürich.pdf]{src=".topwrite/assets/Einzugsanzeige Stadt Zürich.pdf" size="1.38 MB"}），并由租客在办理住址申报时携带
+
+苏黎世市对该政策的介绍见：[Drittmeldepflicht - Stadt Zürich](<https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/drittmeldepflicht.html>)；瑞士其他市县的政策与此相似，具体可参考当地政府官网。
 
 ^
 
@@ -102,17 +106,6 @@
 
 > [info] *后期住址有所变更，需要办理住址变更申报的，或是因离开所住市县需要办理注销的，请参考*[生活篇《“户口”相关》章](35“户口”相关.md)。
 
-^
-
-### **5. 第三方申报义务（Drittmeldepflicht**）
-
-> [warning] *本章节内容的具体实施可能需要额外核实*
-
-根据苏黎世市法规，出租人（房东/中介/**二房东**）在房屋出租情况有变更时（即：原承租人搬出或有新的承租人搬入时等）需向社区所在的人口登记办公室报告房屋出租变动情况（[可在线完成](https://www.drittmeldung.ch/ui/#/home)）。
-
-与此同时，新承租人（包括**转租租客**）需要向社区所在的人口登记办公室申报住址（第一次申报住址需要线下办理，之后可使用[E-Umzug平台](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/onlineschalter/eumzug.html)）。
-
-苏黎世市对此的政策可参考：[Stadt Zürich Drittmeldepflicht](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/drittmeldepflicht.html)
 
 ^
 
