Update .topwrite/assets/image_1695577130903.png, 05结语&学联服务.md, “户口”的注销.md, 住址变更申报.md, 公共交通系统.md, 关于交通和出行.md, 关于跨境出行.md, 关于驾照.md, 居留证的遗失补发.md, 自购单车-滑板车.md, 首次办理“户口”.md

--- a/05结语&学联服务.md
+++ b/05结语&学联服务.md
@@ -46,8 +46,10 @@
 业务介绍：[《新生租房篇+学联伙伴Intermezzo租房公司》](https://forum.acssz.org/d/386)
 ![](.topwrite/assets/image_1682200100537.png =258)
 
-
-##### **2.3.4 电子学联卡**
+##### **2.3.4 学联集运合作伙伴：BeegoPlus**
+业务介绍：[《新学期，学联专属BeegoPlus国际转运优惠！》](<https://forum.acssz.org/d/1101-xin-xue-qi-xue-lian-zhuan-shu-beegoplusguo-ji-zhuan-yun-you-hui>)
+![](.topwrite/assets/image_1695577130903.png)
+##### **2.3.5 电子学联卡**
 
 微信搜索小程序”ACSSZ“，按要求填写信息并上传材料即可办理。
 材料审核通过后，在学联合作商家处出示该卡即可享9折优惠，具体可在小程序内查看。
