--- a/关于跨境出行.md
+++ b/关于跨境出行.md
@@ -1,6 +1,4 @@
-> [success] 本章作者：陈雨航
-
-> [warning] 本章节编写尚未完成
+> [success] 本章作者：陈雨航、赵逸飞
 
 > [info] 【学联提醒】
 > * *原则上，对于中国公民，进出瑞士国境（尤其是通过航空或公路口岸出入境的）必须同时持有瑞士居留证（或有效瑞士签证）和中国护照才能证明身份。即使瑞士边检有时并不对此进行查验，我们亦不建议抱有任何侥幸心理*。
@@ -9,9 +7,18 @@
 > * *无论发生任何情况，均应保持冷静镇定以妥善处理问题。*
 
 ### **1. 中国护照配合申根D类签证/居留证的效力**
+一般，前来瑞士留学的学生获得的是申根D类签证/申根居留证，凭此配合中国普通护照可免签出入：
+- 中华人民共和国
+- 所有中华人民共和国普通护照的免签国家
+- 所有申根国家（名单见：[申根国家名单](<https://www.schengenvisainfo.com/zh-hans/%E7%94%B3%E6%A0%B9%E7%AD%BE%E8%AF%81%E5%9B%BD%E5%AE%B6%E5%90%8D%E5%8D%95/>)）
+
+对于欲前往其他国家人员，或情况较为特殊/“冷门”人员，如不确定能否入境的，建议提前咨询该国主管部门以获得权威答复。
 ^
 ### **2. 转机过境/入境相关**
+一般情况下，除英国、美国、加拿大等国家外，**联程转机不需要入境中转国**，也就不需要中转国的过境签证。如因前后段航司联运协议原因等导致**行李无法在中转地直挂**的（如经伊斯坦布尔转机回国，前段航程为土耳其航空，后段航程为四川航空），或**客票不是联程票**的，可能**需要入境中转国以便提取行李并重新办理托运**。此时，如中转国对持有中国护照和申根签证/居留证人员不免签，则需要提前办理过境签证以免行程受阻。如对是否需要办理过境签证不确定的，建议**提前咨询航司和/或中转国主管部门以获得权威答复**。
+此外，在申根区内转机的，会在**行程中首个/最后一个申根区内口岸办理申根区的入境/出境手续**。例如行程为北京-法兰克福-苏黎世，则在法兰克福通过申根边检入境；行程为苏黎世-维也纳-北京，则在维也纳通过申根边检出境。（此处“境”为“关境”）
+
 ^
 ### **3. 出/入/过境时受阻的应对**
-* 如果您持有效护照、签证，请向边境检查部门说明情况，询问受阻原因。如果您语言不通，可要求对方提供翻译服务。
+* 如持有效护照、签证，请向边境检查部门说明情况，询问受阻原因。如果您语言不通，可要求对方提供翻译服务。
 * 如果您的合理要求未得到回应，请与中国使（领）馆联系。领事官员将向有关部门了解情况，并进行必要交涉。能否放行取决于实际情况。如果您受到不公正对待，请注意收集、保存证据，以便日后诉诸法律。
