--- a/关于驾照.md
+++ b/关于驾照.md
@@ -1,7 +1,7 @@
-> [success] 本章作者：陈雨航
+> [success] 本章作者：陈雨航、赵逸飞、李许雯佳
 
-### **5. 驾照相关**
-*※在入境瑞士的第一年内，配合认证/公证翻译文件（翻译为英法德意均可），可以使用中国驾照租车、开车。这个“认证/公证翻译件”对于不同的租车公司来说要求不一样，有的只要翻译，有的要公证翻译，有的要具有外交效力的认证翻译。国内租车网站上有一个“国际驾照认证件”，据说被认可度很高。
-※超过一年后，中国驾照不再有效，必须转为瑞士驾照。转驾照首先需要在Strassenverkehrsamt（交管局）进行公证，然后报名参加瑞士的路考（Kontrollfahrt）。路考重点不在汽车操控而在于对当地交规的理解，推荐先找瑞士本地驾校教练培训后再参加路考。路考一旦挂科，国内驾照立即失效且不能补考，得从理论开始从头再来了。
-具体规则请参考以下网址：
-<https://www.eda.admin.ch/countries/china/en/home/services/driving-and-vehicles/driving-ch-foreign-licence.html>*
+- 对于持有外国驾照，希望在瑞士驾车的：
+➢ 持有中国驾照的，**在首次入境瑞士的第一年内，凭中国驾照及其公证/认证翻译文件（翻译为英语/德语/法语/意大利语均可），可以在租车公司办理租车业务并驾驶车辆**。这个“公证/认证翻译文件”对于不同的租车公司来说要求不一样，有的只要翻译，有的要公证翻译，有的要具有外交效力的认证翻译，具体请参考租车公司官网等。国内租车网站上有一个“国际驾照认证件”，据说被认可度很高。具体可参考：[Driving in Switzerland on a foreign licence](<https://www.eda.admin.ch/countries/china/en/home/services/driving-and-vehicles/driving-ch-foreign-licence.html>)
+➢ **首次入境瑞士一年后，则需要将中国驾照转为瑞士驾照以便继续拥有在瑞士驾驶车辆的资格。** 如暂时不需要驾驶车辆的，也可以等到需要时再换领，无须确保无缝衔接。需要首先在交管局（Strassenverkehrsamt）进行公证，然后报名参加瑞士的路考（Kontrollfahrt）。路考重点不在汽车操控而在于对当地交规的理解，推荐先找瑞士本地驾校教练培训后再参加路考。路考一旦挂科，国内驾照立即失效且不能补考，得从理论开始从头再来了。具体可参考：[Ausländischen Führerausweis umtauschen](<https://www.zh.ch/de/mobilitaet/fuehrerausweis-fahren-lernen/auslaendischer-fuehrerausweis/auslaendischen-fuehrerausweis-umtauschen.html>)
+- 对于希望在苏黎世州考取驾照的，请参考：[Fahren lernen](<https://www.zh.ch/de/mobilitaet/fuehrerausweis-fahren-lernen/fahren-lernen.html>)
+
