--- a/首次办理“户口”.md
+++ b/首次办理“户口”.md
@@ -1,4 +1,6 @@
-> [success] 本章作者：田竹仝、陈雨航、赵逸飞、杨锦涛、范梦瑶、张家萌
+> [success] 本章作者：田竹仝、陈雨航、赵逸飞、杨锦涛、范梦瑶
+
+> [success] 特别鸣谢：于之赫、张家萌
 
 > [info] *本章节内容最近更新于2023年9月1日*。
 > ETH和UZH两所大学对于办理”迁入“均有十分详细的指导，参见：
