--- a/防诈反诈.md
+++ b/防诈反诈.md
@@ -1,6 +1,6 @@
 > [success] 本章作者：赵逸飞
 
-> [success] 特别鸣谢：中国驻苏黎世总领馆
+> [success] 特别鸣谢：中国驻苏黎世总领馆、徐毅蓁
 
 > [info] *如你在瑞士经历过诈骗的，欢迎将相关经历通过<info@acssz.org>分享给我们，或在[学联论坛](https://forum.acssz.org/)中分享，以帮助更多同学识破诈骗分子的阴谋。*
 
@@ -71,7 +71,16 @@
   8\). 凡调查公文使用任何内地不存在的法律术语的，都是诈骗
   9\). 凡国内科级、处级、局（厅）级单位使用国徽印章的，都是诈骗
   10\). 凡“公检法”人员口音与其所在地不符的（如北京警察操闽南口音），或使用一些仅在台湾地区流行的说法的，都是诈骗（前者需综合判断）
+
 ##### **1.2.2 冒充瑞士有关部门诈骗**
+- **诈骗方式：** 电话/邮件诈骗
+- **诈骗团伙：** 欧洲当地的诈骗团伙
+- **案例：**
+【案例一】张三接到电话，对方自称瑞士海关，称张三有包裹被查扣，要求张三配合调查
+【案例二】李四收到邮件，对方自称UBS银行，称李四银行账户出现异常，要求李四进行操作验证
+- **风险预防：**
+1). 瑞士有关部门不会通过电话通知当事人涉案，也不会以该方式要求当事人配合调查
+2). 瑞士银行不会邮件通知当事人账户异常，该类邮件建议直接删除，必要时可自行通过其他方式联系银行核实
 
 #### **1.3 机票相关诈骗**
 
