Update 常用租房渠道及其流程.md, 常见赴瑞路线.md, 租房考虑因素.md, 购票注意事项.md

--- a/常用租房渠道及其流程.md
+++ b/常用租房渠道及其流程.md
@@ -62,11 +62,9 @@
 
 > [info] 该渠道既适用于在苏黎世找房的同学，也适用于在国内远程找房的同学；且回复速度和申请成功率较高。
 
-> [warning] 本章节部分内容自相矛盾，需要额外核实
-
 ##### **2.2.1 平台介绍**
 
-[ETH\&UZH联办租房平台](https://wohnen.ethz.ch/index.php?act=searchoffer)是由[ETH\&UZH住房办公室](https://www.wohnen.ethz.ch/en)建立的租房平台，既有（与[WOKO](<https://www.woko.ch/>)合作的）自有房源资源，也有本地房东/中介发布的房源信息。
+[ETH\&UZH联办租房平台](https://wohnen.ethz.ch/index.php?act=searchoffer)是由[ETH\&UZH住房办公室](https://www.wohnen.ethz.ch/en)（下简称“住房办”）建立的租房平台，既有（与[WOKO](<https://www.woko.ch/>)合作的）自有房源资源，也有本地房东/中介发布的房源信息。
 
 ##### **2.2.2 注册和租房步骤**
 
@@ -85,25 +83,26 @@
   ➢ 房源类别为”shared apartment“
   ➢ 可用时间为自9月1日起
   ➢ 联系方式为<housing@ethz.ch>
+  ➢ 仅接受28以下人员申请
 
-其中，前者的租房具体流程与社会渠道无异，具体以房东要求为准。
-**本章节主要介绍后者的租房流程**。 此外，部分房源对申请人有年龄和/或身份限制，此项在房源描述（Description）部分可见。例如，’’Age limit 28 years, Reserved for incoming UZH Master HS23 students“代表该房源仅供28岁以下的2023年秋季学期UZH硕士新生申请，请仔细甄别。
-点击No.一栏可以让编号按时间排序，直接在最后几行看新上的房源；
-可设制“新上房源邮件提醒功能”。在Search accommodation 页面，选择Search agent，设制自己期望的房源类型、整租或合租、城市、租金区间、可租时间、是否带家具等内容（不一定是WOKO，也可能是私人房东），一旦有符合期望的新上房源，ETH\&UZH联办租房平台会自动发送邮件，让租房人实时获得最新房源信息。设置后建议定期及时查看邮箱，如看到心仪的房源，即刻申请。
-
-【第三步】在该平台找到心仪的WOKO房源后，通过邮件（<housing@ethz.ch>）发送租房申请，邮件中须包含：
+【第三步】找到属于后者（平台自有/WOKO房源）的心仪房源后，须通过邮件（<housing@ethz.ch>）发送租房申请，邮件中须包含：
 
 * 房源编号
 * 申请人身份
 
 最好在邮件中表明申请人的**出生日期**并将**录取通知书作**为附件上传以避免被追问。
-一般，Housing Office回复十分迅速。若房源可用，半天内即可收到带有房源注册表格链接的邮件，此时需要填写并提交该表格，并及时回复邮件告知Housing Office已填写表格注册。注册后约半小时即可收到房子的offer。
-若在瑞士工作时间发送租房申请邮件，但3小时内未收到Housing Office回复的，或告知Housing Office已注册完成后1小时内未收到offer的，建议检查垃圾邮件。若垃圾邮件中也未找到，可能代表消息被遗漏，此时可酌情再发邮件追问。
+一般，住房办回复十分迅速。若房源可用，半天内即可收到带有房源注册表格链接的邮件，此时需要填写并提交该表格，并及时回复邮件告知住房办已填写表格注册。注册后约半小时即可收到房子的offer。
+若在瑞士工作时间发送租房申请邮件，但3小时内未收到住房办回复的，或告知住房办已注册完成后1小时内未收到offer的，建议检查垃圾邮件。若垃圾邮件中也未找到，可能代表消息被遗漏，此时可酌情再发邮件追问。在查找和申请过程中，有如下注意事项：
+- 此处的“房源”仅为楼房，而非所住的房间；如申请成功，将由住房办随机分配该房源中的一间房间，无法在申请过程中选择房间。
+- 部分房源对申请人有年龄和/或身份限制，此项在房源描述（Description）部分可见。例如，’’Age limit 28 years, Reserved for incoming UZH Master HS23 students“代表该房源仅供28岁以下的2023年秋季学期UZH硕士新生申请，请仔细甄别。
+对于UZH学生，可用房源可能较少（上架后最多2天就会抢完），如晚申请，可能会进入候补名单。此时可提前与住房办联系，询问什么时候上新房源，并在上架时间不停刷新网页。
+- 点击“No.”一栏可以让编号按时间排序，直接在最后几行看新上传的房源。
+- 可设制“新上传房源邮件提醒功能”。在Search accommodation页面，选择Search agent，设制自己期望的房源类型、整租或合租、城市、租金区间、可租时间、是否带家具等内容（不一定是WOKO，也可能是私人房东），一旦有符合期望的新上房源，ETH\&UZH联办租房平台会自动发送邮件，让租房人实时获得最新房源信息。设置后，建议定期及时查看邮箱，如看到心仪的房源，即刻申请。
+- 如年龄超过28岁的，也可以给<housing@ethz.ch>发邮件，将可能收到woko其它地方价格稍贵的房子的offer，比28岁以下贵100-200CHF
+- 每个人**有且只有一次**向住房办申请住房的机会。住房办会随机分发有空的房子，有可能不是你希望申请的那一套（属于是开盲盒）。如果分配到房子没有在48h内确认（ETH），则会失去分配的机会；
+- 一般，ETH提供的租期大多为半年，UZH提供的租期大多为一年。理论上不可允许转租。
 
-> 请注意，每个人**有且只有一次**向Housing Office申请住房的机会。Housing Office会随机分发有空的房子，有可能不是你希望申请的那一套（属于是开盲盒）。如果分配到房子没有在48h内确认（ETH），则会失去分配的机会；
-> 1\) UZH房源较少，上架后最多2天就会抢完，晚申请可能会进入wating list。可提前与Housing Office联系，询问什么时候上新房源，并在上架时间不停刷新网页；
-> 2\) 年龄超过28岁的也可以给<housing@ethz.ch>发邮件，将可能收到woko其它地方价格稍贵的房子的offer，比28岁以下贵100-200CHF；
-> 3\) 根据大家的分享，ETH给的都是半年，UZH大部分给的都是一年。理论上不可以转租；
+而对于前者（私人房东上传的房源），其租房具体流程与社会渠道无异，具体以房东要求为准（见后文）。
 
 ^
 
