--- a/常见赴瑞路线.md
+++ b/常见赴瑞路线.md
@@ -1,10 +1,8 @@
 > [success] 本章作者：赵逸飞
 
-### **2. 赴瑞可能路线及其特点**
+> [info] 本章节综合当前航班执行情况、现有航班计划、当前放票情况、航司合作情况、行李直挂情况、行程总时长、航司“靠谱”程度等编写；仅供参考）
 
-（本章节综合当前航班执行情况、现有航班计划、当前放票情况、航司合作情况、行李直挂情况、行程总时长、航司“靠谱”程度等编写；仅供参考）
-
-#### **2.1 自中国内地直航赴瑞**
+### **1. 自中国内地直航赴瑞**
 
 优点：
 
@@ -22,8 +20,8 @@
 * CA861航班（北京首都PEK-日内瓦GVA），[中国国际航空](https://www.airchina.com.cn/)承运，每周一、四、五、六 执行，起降时刻02:25-07:15，实际飞行时长约11小时，执飞机型为A332
 
 目前，中国内地→瑞士的航线航班没有增加的计划。如有增班的信息，我们会第一时间通告。
-
-#### **2.2 经中国香港转机赴瑞**
+^
+### **2. 经中国香港转机赴瑞**
 
 优点：
 
@@ -44,8 +42,8 @@
 * LX139航班，[瑞士国际航空](https://www.swiss.com/cn/zh/homepage)承运，每周一、二、三、五、六、日执行，起降时刻22:25-06:10+1，实际飞行时长约13.5h，执飞机型为A343
 
 亦可以将本项与下面的3项结合起来安排路线，选择经香港前往其他城市，再转机赴瑞，如“西安-香港-法兰克福-苏黎世”“成都-香港-多哈-苏黎世”等。
-
-#### **2.3 经申根区内其他城市转机赴瑞**
+^
+### **3. 经申根区内其他城市转机赴瑞**
 
 优点：
 
@@ -83,8 +81,8 @@
   承运航司：[中国国际航空CA](https://www.airchina.com.cn/)、[北欧航空SK](https://www.flysas.com/cn-zh/)、[瑞士国际航空LX](https://www.swiss.com/cn/zh/homepage)等
 
 此外，还有达成波兰航空LO的航班经华沙肖邦WAW转机的选择可以考虑，但据反馈该路线行李丢失概率较大，且航司在航班取消时操作退款速度极慢。
-
-#### **2.4 经中东转机赴瑞**
+^
+### **4. 经中东转机赴瑞**
 
 优点：
 
@@ -110,8 +108,8 @@
   承运航司：[阿提哈德航空EY](https://www.etihad.com/zh/)
 * 北京大兴PKX/上海浦东PVG/广州白云CAN/杭州萧山HGH-多哈哈马德DOH-苏黎世ZRH
   承运航司：[卡塔尔航空QR](https://www.qatarairways.com/zh-cn/homepage.html)
-
-#### **2.5 其它路线**
+^
+### **5. 其它路线**
 
 除以上路线外，还有少量其他路线可供选择，如：
 （仅考虑可以联程且行李可直挂的路线）
@@ -136,8 +134,8 @@
   \-- 价格稍高
 
 此外，亦有经新加坡、曼谷等东南亚城市转机的选择。因其耗时普遍较长（长于上述所有方案），在此不列入。
-
-#### **2.6 前往出境口岸所在地**
+^
+### **6. 前往出境口岸所在地**
 
 鉴于许多同学的常驻城市和出境口岸所在城市不同，需要额外考虑从常驻城市到出境口岸所在城市这段行程。
 一般情况下，假如你的常驻城市到出境口岸所在城市有直达航班，而该航班的承运航司或其合作伙伴又执飞上述洲际航线的，可在购票界面中直接讲始发城市填写为你的常驻城市，看看是否有常驻城市→出境口岸所在城市→中转城市（如有）→苏黎世的联程机票，如有的话，即使价格稍高我们也建议选择，因为这样行李能够从你的始发城市直接直挂到苏黎世，会大大简化你的行程。
